--- a/vs2017/quantdata.vcxproj
+++ b/vs2017/quantdata.vcxproj
@@ -123,7 +123,10 @@
     <ClCompile Include="..\src\dllmain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\inttypes.h" />
     <ClInclude Include="..\include\iquantdata.h" />
+    <ClInclude Include="..\src\apikey.h" />
+    <ClInclude Include="..\src\quantdata.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
