--- a/vs2017/quantdatalib.vcxproj
+++ b/vs2017/quantdatalib.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\include\iquantdata.h" />
+    <ClInclude Include="..\include\inttypes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\dllmain.cpp" />
