--- a/vs2017/quantdata.vcxproj.filters
+++ b/vs2017/quantdata.vcxproj.filters
@@ -23,9 +23,6 @@
     <ClInclude Include="..\include\iquantdata.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\inttypes.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\quantdata.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -37,6 +34,9 @@
     </ClInclude>
     <ClInclude Include="..\src\quantdata\series_tpl.h">
       <Filter>src\quantdata</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\commontypes.h">
+      <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
