--- a/vs2017/quantdata.vcxproj
+++ b/vs2017/quantdata.vcxproj
@@ -129,8 +129,11 @@
     <ClInclude Include="..\src\apikey.h" />
     <ClInclude Include="..\src\downloader.h" />
     <ClInclude Include="..\src\quantdata.h" />
+    <ClInclude Include="..\src\quantdata\checks.h" />
     <ClInclude Include="..\src\quantdata\manager.h" />
+    <ClInclude Include="..\src\quantdata\provider.h" />
     <ClInclude Include="..\src\quantdata\series.h" />
+    <ClInclude Include="..\src\quantdata\types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
