Add templates for allocator functions in all series related classes

--- a/vs2017/quantdata.vcxproj.filters
+++ b/vs2017/quantdata.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="..\src\quantdata\manager.cpp">
       <Filter>src\quantdata</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\quantdata\series.cpp">
-      <Filter>src\quantdata</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\iquantdata.h">
@@ -37,9 +34,6 @@
     </ClInclude>
     <ClInclude Include="..\src\quantdata\manager.h">
       <Filter>src\quantdata</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\downloader.h">
-      <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\quantdata\provider.h">
       <Filter>src\quantdata</Filter>
@@ -64,6 +58,12 @@
     </ClInclude>
     <ClInclude Include="..\src\quantdata\array\static_array.h">
       <Filter>src\quantdata\array</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\quantdata\series_impl.h">
+      <Filter>src\quantdata</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\quantdata\downloader.h">
+      <Filter>src\quantdata</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
