--- a/vs2017/quantdata.vcxproj
+++ b/vs2017/quantdata.vcxproj
@@ -122,7 +122,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\dllmain.cpp" />
     <ClCompile Include="..\src\quantdata\manager.cpp" />
-    <ClCompile Include="..\src\quantdata\series.cpp" />
+    <ClCompile Include="..\src\quantdata\hub.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\jsoncons\include\jsoncons\detail\jsoncons_config.hpp" />
@@ -163,8 +163,8 @@
     <ClInclude Include="..\src\quantdata\exceptions.h" />
     <ClInclude Include="..\src\quantdata\manager.h" />
     <ClInclude Include="..\src\quantdata\structs.h" />
-    <ClInclude Include="..\src\quantdata\series.h" />
-    <ClInclude Include="..\src\quantdata\series_functions.h" />
+    <ClInclude Include="..\src\quantdata\hub.h" />
+    <ClInclude Include="..\src\quantdata\hub_functions.h" />
     <ClInclude Include="..\src\quantdata\api.h" />
     <ClInclude Include="..\src\quantdata\types.h" />
   </ItemGroup>
