--- a/vs2017/quantdata.vcxproj.filters
+++ b/vs2017/quantdata.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\src\quantdata\hub.cpp">
       <Filter>src\quantdata</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\quantdata\ohlc.cpp">
+      <Filter>src\quantdata</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\quantdata\tick.cpp">
+      <Filter>src\quantdata</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\iquantdata.h">
@@ -162,6 +168,18 @@
       <Filter>src\quantdata</Filter>
     </ClInclude>
     <ClInclude Include="..\src\quantdata\hub.h">
+      <Filter>src\quantdata</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\quantdata\ohlc_functions.h">
+      <Filter>src\quantdata</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\quantdata\tick_functions.h">
+      <Filter>src\quantdata</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\quantdata\ohlc.h">
+      <Filter>src\quantdata</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\quantdata\tick.h">
       <Filter>src\quantdata</Filter>
     </ClInclude>
   </ItemGroup>
